--- a/src/assets/css/buttons.css
+++ b/src/assets/css/buttons.css
@@ -5,6 +5,8 @@
     border: 1px solid rgb(185, 185, 185);
     cursor: pointer;
 }
+
+/* BUTTONS IN BBUTTON BOX */
 .in-progress{
     background-color: yellow;
     font-weight: 700;
@@ -20,9 +22,72 @@
     background-color: rgb(96, 255, 109);
 }
 .all{
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(244, 244, 244);
     font-weight: 700;
 }
 .all:hover{
     background-color: rgb(236, 236, 236);
 }
+
+/* STATUS BUTTONS*/
+.done-status-button{
+    background-color: rgb(0, 255, 21) !important;
+    border: 1px solid rgb(89, 89, 89);
+    width: 6em;
+    height: 2em;
+}
+.done-status-button:hover{
+    background-color: rgb(96, 255, 109) !important;
+}
+.in-progress-status-button{
+    background-color: yellow !important;
+    border: 1px solid rgb(89, 89, 89);
+    width: 6em;
+    height: 2em;
+}
+.in-progress-status-button:hover{
+    background-color: rgb(255, 255, 115) !important;
+}
+
+
+/* BUTTONS IN TABLE */
+.notes-table-button{
+    background-color: white;
+    border-radius: 30px;
+    padding: 0.3em 0.6em 0.2em 0.6em;
+}
+.notes-table-button:hover{
+    background-color: rgb(243, 243, 243);
+}
+.has-notes{
+    background-color: rgb(9, 255, 9);
+}
+
+
+/* MODAL BUTTONS */
+.close-modal-button{
+    background-color: inherit;
+    border: 2px solid rgb(173, 173, 173);
+    padding: 0.6em 1.3em;
+    border-radius: 5px;
+    font-weight: 500;
+    color: rgb(36, 36, 36);
+    cursor: pointer;
+}
+.close-modal-button:hover{
+    background-color: #f5f5f5;
+}
+.save-modal-button{
+    background-color: #262626;
+    border: 2px solid rgb(173, 173, 173);
+    padding: 0.6em 1.3em;
+    border-radius: 5px;
+    font-weight: 500;
+    color: rgb(243, 243, 243);
+    cursor: pointer;
+}
+.save-modal-button:hover{
+    background-color: #000000;
+}
+
+
