--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -8,4 +8,8 @@
     padding: 0.5em;
     width: 100%;
     height: 12em;
+    font-size: 1.2em;
+}
+.textarea:focus{
+    outline: 1px solid grey;
 }
