--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,10 +4,10 @@ html,body{
     background-color: rgb(250, 250, 250) !important;   
 }
 .jobtype-header-wrapper{
-    padding: 5em 8em 1em 10em;
+    padding: 5em 8em 3em 10em;
     /* font-family: "Quicksand", sans-serif; */
     /* font-family: "Cabin", sans-serif; */
-    background-color: #cbf2ff;
+    background-color: #b8edff;
 }
 .wrapper{
     padding: 5em 10em 10em 10em;
@@ -54,6 +54,7 @@ th, td {
     height: 2em;
     width: 10em;
 }
+
 .search-box{
     border-radius: 30px;
     padding: 0.25em 0.75em 0.15em 0.75em;
@@ -64,8 +65,14 @@ th, td {
     border: 2px solid black;
 }
 
+.last_activity-th{
+    cursor: pointer;
+}
+.last_activity-th-icon:hover{
+    color: grey;
+}
 .project-done{
-    background-color: rgb(0, 255, 21) !important;
+    background-color: #00ff15 !important;
 }
 .project-inprogress{
     background-color: yellow !important;
