--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -86,6 +86,51 @@ th, td {
 
 
 
+.checkbox-container input[type="checkbox"] {
+    display: none;
+    
+}
+.checkbox-container {
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    font-size: 18px;
+    user-select: none;
+}
+.checkmark {
+    border: 1px solid rgb(140, 140, 140);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #ccc;
+    border-radius: 4px;
+    transition: background-color 0.2s ease;
+}
+.checkbox-container input:checked + .checkmark {
+    background-color: #4caf50; 
+    border: 2px solid #4caf50;
+}
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+    left: 8px;
+    top: 3px;
+    width: 6px;
+    height: 12px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+.checkbox-container input:checked + .checkmark:after {
+    display: block;
+}
+
+
+
+
 @media (max-width: 1410px) {
     .row-projectname{
         min-width: 10em;
